testdata/corset/valid/lookup_26.lisp
(defcolumns (X :i17) (Y :i16))
(deflookup (test :unchecked) (Y) (X))
